# MuCalc

./: CMakeLists.txt  README.md
data/: Mu.desktop  Pi.desktop  application_pi_gimp.xcf
po/: CMakeLists.txt
src/: Config.vala.cmake  canvas.vala  main.vala  main_window.vala
src/Math/: 2dgraph.vala  expression.vala  function.vala  math.vala  point.vala  term.vala  variable.vala
src/Widgets/: graph.vala
